replace toList() with collect(Collectors.toList()) in ProductService